# phases

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  LICENSE-data  README.md  conda-lock.yml  environment.yml  postBuild  pyproject.toml  requirements-lock.txt  requirements.txt  run_all.sh
.github/workflows/: publish-image.yml
analyses/: 04_validation_report.py  05_empirical_application.py  06_empirical_two_level.py  07_refined_empirical.py  08_coupling_robustness.py  09_parkin_basin_restricted.py  10_neiman_power_diagnostics.py  10_neiman_size_diagnostic.py  11_chronology_14c.py  12_sensitivity_grid.py  13_neiman_distance_and_fit.py  14_drainage_basin.py  15_continuum_test.py  16_basin_membership.py  17_basin_results.py  18_kandler_shennan_neutrality.py  19_abc_transmission.py  20_tempo_mode_ews.py  21_signal_recovery.py  22_generator_diagnostic.py  23_phases_vs_spatial_drift.py  24_phases_drift_robustness.py  25_drift_vs_groups_demo.py  26_cmv_phase_groupness.py  27_cmv_lmv_repertoire.py  28_macro_boundary.py  29_concept_figure.py  30_regional_map.py  31_within_region_structure.py  33_time_aware_emergence.py  34_emergence_robustness.py  35_basin_pullout.py  36_canonical_phase_map.py  37_lmv_drift_groups.py  38_abc_smc_transmission.py  39_abc_smc_validation.py  40_hierarchical_convergence.py  41_hierarchical_convergence_validation.py  42_figS6_dynamic.py  43_bayesian_fst.py  (+4 more)
data/: LMVData-22March2006.csv  LMVData-22March2006.xls  LMVData.xlsx  LMVData_locations.csv  README.md
data/CMV/: FORD36-2.dbf  FORD36-2.shp  FORD36-2.shx  FORD36DA.dbf  FORD36DA.shp  FORD36DA.shx  GEOFILE.dbf  GEOFILE.shp  GEOFILE.shx  PFGOUT.dbf  PFGOUT.shp  PFGOUT.shx  PHILLIPS.dbf  PHILLIPS.prj  PHILLIPS.shp  PHILLIPS.shx  table1.txt
data/Shapefiles/: LMVHydrology.dbf  LMVHydrology.sbn  LMVHydrology.sbx  LMVHydrology.shp  LMVHydrology.shp.xml  LMVHydrology.shx  LMVMajorRivers.dbf  LMVMajorRivers.sbn  LMVMajorRivers.sbx  LMVMajorRivers.shp  LMVMajorRivers.shp.xml  LMVMajorRivers.shx  LMVcounties4.dbf  LMVcounties4.sbn  LMVcounties4.sbx  LMVcounties4.shp  LMVcounties4.shp.xml  LMVcounties4.shx  LMVgeology3.dbf  LMVgeology3.sbn  LMVgeology3.sbx  LMVgeology3.shp  LMVgeology3.shp.xml  LMVgeology3.shx  LMVstates.dbf  LMVstates.sbn  LMVstates.sbx  LMVstates.shp  LMVstates.shp.xml  LMVstates.shx  (+1 more)
output/: abc_smc_transmission.md  abc_smc_validation.md  abc_transmission.md  basin_pullout.md  basin_results.md  bayesian_fst.md  bayesian_fst_validation.md  chronology_14c.md  cmv_lmv_repertoire.md  cmv_phase_groupness.md  continuum_test.md  drainage_basin.md  drift_vs_groups_demo.md  emergence_robustness.md  empirical_findings.md  empirical_findings_v2.md  empirical_refined.md  generator_diagnostic.md  hierarchical_convergence.md  hierarchical_convergence_validation.md  kandler_shennan_neutrality.md  lmv_drift_groups.md  macro_boundary.md  neiman_distance_and_fit.md  neiman_size_diagnostic.md  parkin_basin_restricted.md  phases_drift_robustness.md  phases_vs_spatial_drift.md  sensitivity_grid.md  signal_recovery.md  tempo_mode_ews.md  time_aware_emergence.md  validation_report.md
(+50 files in other folders)
