[project]
name = "phases"
version = "1.0.0"
description = "Are the phases real? Distinguishing bounded interaction groups from spatially structured drift in central Mississippi Valley decorated ceramics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Carl P. Lipo" },
    { name = "Robert J. DiNapoli" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "geopandas>=0.13",
    "pyproj>=3.4",
    "shapely>=2.0",
    "cartopy>=0.22",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

# The parent model (monument-mls) is an optional path dependency installed
# editable, not pinned here to avoid a brittle relative file URL:
#     pip install -e ../monument-mls
# It exposes the `signaling` package and is needed only by the two
# parent-model-coupled supplemental analyses (analyses 08 and 10). No
# main-text figure depends on it.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mls_emergence"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Intentional style choices in this research codebase:
#   E402  import not at top  - scripts set the Matplotlib backend and sys.path
#                              before importing project modules.
#   E701  multiple statements on one line (colon)  - terse guards, e.g.
#                              `if n == 0: return 0.0`.
#   E702  multiple statements on one line (semicolon)  - paired short
#                              assignments, e.g. `c = arr; n = c.sum()`.
ignore = ["E402", "E701", "E702"]
